test/langtools/tools/javac/cantReferenceBeforeCtor/CantReferenceBeforeConstructorTest.out
CantReferenceBeforeConstructorTest.java:30:17: compiler.err.cant.ref.before.ctor.called: CantReferenceBeforeConstructorTest.BB.CC()
1 error
